tests/sksl/errors/PixelFormatMismatch.glsl
### Compilation failed:

error: 13: expected argument of type 'layout (rgba32f) writeonlyTexture2D'
    takes_rgba32f(r32fTex);
                  ^^^^^^^
error: 14: expected argument of type 'layout (rgba32f) writeonlyTexture2D'
    takes_rgba32f(rgba8Tex);
                  ^^^^^^^^
error: 16: expected argument of type 'layout (r32f) writeonlyTexture2D'
    takes_r32f(rgba32fTex);
               ^^^^^^^^^^
error: 18: expected argument of type 'layout (r32f) writeonlyTexture2D'
    takes_r32f(rgba8Tex);
               ^^^^^^^^
error: 20: expected argument of type 'layout (rgba8) writeonlyTexture2D'
    takes_rgba8(rgba32fTex);
                ^^^^^^^^^^
error: 21: expected argument of type 'layout (rgba8) writeonlyTexture2D'
    takes_rgba8(r32fTex);
                ^^^^^^^
6 errors
